Fix: Chat messages history no longer working Refactor: Reworked character count limit to be more efficient Style: Reworked emote spacing

--- a/assets/SCSS/_inputComponents.scss
+++ b/assets/SCSS/_inputComponents.scss
@@ -1,5 +1,7 @@
 .ntv__input-component {
+	margin: 0 0.1em 0 0.1em;
+
 	&__body {
-		margin: 0 0.618px 0 1.236px;
+		margin: 0 2px 0 1px;
 	}
 }
